# The-Evolution-of-Todo

./: .gitignore  AGENTS.md  CLAUDE.md  PHASE_II_COMPLETION_REPORT.md  README.md  docker-compose.yaml  pyproject.toml
.claude/agents/: ai-integration-specialist.md  auth-security-expert.md  fullstack-architect.md  kubernetes-engineer.md  nextjs-app-builder.md  spec-architect.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  rate_limiter.py  requirements.txt  security_logger.py
backend/agent/: __init__.py  chat_agent.py  tools.py
backend/routes/: chat.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_models.py  test_tasks.py  test_tools.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  package-lock.json  package.json
frontend/__tests__/: setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: command-palette-wrapper.tsx  command-palette.tsx  error-boundary.tsx  keyboard-shortcuts.tsx  providers.tsx  reminders-provider.tsx  theme-provider.tsx
frontend/hooks/: use-keyboard-nav.ts  use-reminders.ts  use-tasks.ts
frontend/lib/: auth-client.ts  auth.ts  export-csv.ts
frontend/types/: chat.ts  index.ts
k8s/: Chart.yaml  values-dev.yaml  values.yaml
k8s/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
specs/001-fullstack-web/: data-model.md  design-system.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/: spec.md
specs/002-ai-chatbot/: spec.md
specs/002-task-crud/: spec.md
specs/003-mcp-tools/: spec.md
specs/003-task-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-chat-api/: spec.md
specs/005-chat-ui/: data-model.md  plan.md  (+4 more)
src/: __init__.py  commands.py  main.py  models.py  storage.py  utils.py
tests/: test_commands.py  test_integration.py  test_models.py  test_storage.py  test_utils.py
(+169 files in other folders)
